--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -21,7 +21,7 @@ body {
     /* height: 100vh; */
     border-width: 2px;
     border-style: dashed;
-    gap: 40px;
+    /* gap: 20px; */
     margin-bottom: 0 8px 20px 8px;
     padding-bottom: 20px;
 }
@@ -33,7 +33,7 @@ body {
     /* justify-content: center; */
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    max-height: 100vh;
     padding: 0 20px 20px 20px;
 }
 
@@ -77,6 +77,7 @@ input {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 8px;
 }
 
 /* status__tool styling */
@@ -94,7 +95,7 @@ input {
 .sub__title {
     font-size: 32px;
     color: #58B19F;
-    margin: 50px 0 20px 0;
+    margin: 10px 0;
 }
 
 /* table styling */
@@ -139,7 +140,7 @@ table {
 /* width150 */
 .width150 {
     width: 150px;
-    height: 80%;
+    height: 60%;
     padding: 8px;
     display: flex;
     justify-content: center;
@@ -151,7 +152,7 @@ table {
 /* wrap__button__action styling */
 .wrap__button__action {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
